# todoist-nvim

./: Cargo.toml  README.md  main.rs  todoist.lua
files/: todoist.lua
lua/: todoist.lua
lua/todoist/: init.lua  nav.lua
plugin/: todoist.lua
src/: api.rs  fetch.rs  main.rs  models.rs  parser.rs  snapshot.rs  sync.rs
